# AI-Notebook-template

./: .coderabbit.yaml  .env.sample  .gitignore  README.md  docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/workflows/: pytest.yml
backend/: Dockerfile.backend  pyproject.toml
backend/app/: db.py  main.py  migrate_db.py
backend/app/cruds/: users.py
backend/app/models/: users.py
backend/app/routers/: users.py
backend/app/schemas/: users.py
frontend/: Dockerfile.frontend  pyproject.toml
frontend/app/: main.py
frontend/tests/: test_main.py
